Commit 7. UI Size of Main and Confirmation page Bugs fixed #Issue2 Closed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-
+  <img src="/images/NewsPaperImg.jpg" class="mainImage" alt="">
   <div class="mainDiv">
     <h1 class="Mh1">Stay Updated!</h1>
     <h2 class="Mh2">Join 60,000+ product managers receiving monthly updates on:</h2>
@@ -44,12 +43,7 @@
       <h3 class="h3">And much more!
       </h3>
     </div>
-
-    <img src="/images/NewsPaperImg.jpg" class="mainImage" alt="">
-
-
-
-    <form class="form" method="#" action="/confirmationPage.ejs">
+    <form class="form" method="#" action="/confirmationPage">
       <div class="EmailDiv">
         <label for="email">Email address</label>
         <br>
