--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,34 @@
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
+
 .mainDiv {
   position: absolute;
-  left: 70px;
-  top: 35px;
+  left: 150px;
+  top: 40px;
   width: 400px;
   padding: 0;
-  margin: 0;
+}
+
+.CMainDiv {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  text-align: center;
 }
 
 .mainImage {
   position: absolute;
-  left: 55rem;
-  top: 30px;
-  left: 550px;
-  height: 600px;
-  width: 750px;
+  top: 80px;
+  left: 850px;
+  height: 700px;
+  width: 950px;
   border-radius: 20px;
 }
 .Mh1 {
@@ -84,14 +95,6 @@ body {
   text-align: center;
 }
 
-.CMainDiv {
-  width: 500px;
-  height: 500px;
-  text-align: center;
-  position: relative;
-  top: 250px;
-  left: 700px;
-}
 .Cp {
   font-size: 3rem;
   color: #130f40;
